--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/assets/images/castle-wall3.jpg);
+  background-image: url(../images/castle-wall3.jpg);
   color: #3e0068;
   font-family: MedievalSharp; 
   font-size: 20px; 
